--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -79,8 +79,8 @@
 								<p:menuitem value="Errores"
 									url="erroresferencias.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
-							<p:submenu label="Impuestos y tasas">
-								<p:menuitem value="Lista de Impuestos" 
+							<p:submenu label="Recursos a Impuestos">
+								<p:menuitem value="Lista de Recursos" 
 									url="listaimpuestos.xhtml" icon="ui-icon-search" />
 								<p:menuitem value="Registrar"
 									url="registraimpuesto.xhtml" icon="ui-icon-arrowthick-1-e" />
