PPv09d-b20140410-r2 -Correcciones menores. -Inclusion de fecha límite de pago en el listado de gastos de pago simple.

--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -33,7 +33,7 @@
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
 													<p:commandButton value="Detalles" update="msgs, popup, activos" action="#{GestorListaGastos.cargarDetallesGasto}"/>
-													<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscarActivo, panelBuscarReferencia, panelBuscarProvision, activos, provisiones, gastos, COACES, NUPROF" actionListener="#{GestorListaGastos.limpiarPlantilla}" />	
+													<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscarActivo, panelBuscarReferencia, panelBuscarProvision, activos, provisiones, gastos, COACES, NUPROF, FELIPG" actionListener="#{GestorListaGastos.limpiarPlantilla}" />	
 
 										</h:panelGrid>
 									</p:fieldset>
