--- a/WebContent/pagosimple.xhtml
+++ b/WebContent/pagosimple.xhtml
@@ -578,9 +578,16 @@
 
 														<p:column>
 															<f:facet name="header">
-																<h:outputText value="Fecha de Devengo" />
+																<h:outputText value="Devengo" />
 															</f:facet>
 															<h:outputText value="#{gastoactivo.FEDEVE}" />
+														</p:column>
+
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Límite de Pago" />
+															</f:facet>
+															<h:outputText value="#{gastoactivo.FELIPG}" />
 														</p:column>
 
 						</p:dataTable>
@@ -691,9 +698,16 @@
 
 														<p:column>
 															<f:facet name="header">
-																<h:outputText value="Fecha de Devengo" />
+																<h:outputText value="Devengo" />
 															</f:facet>
 															<h:outputText value="#{gastoprovision.FEDEVE}" />
+														</p:column>
+
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Límite de Pago" />
+															</f:facet>
+															<h:outputText value="#{gastoprovision.FELIPG}" />
 														</p:column>
 
 						</p:dataTable>
