--- a/WebContent/pagocomunidad.xhtml
+++ b/WebContent/pagocomunidad.xhtml
@@ -200,11 +200,15 @@
 										<h:panelGrid columns="1" cellpadding="5">
 
 										<p:panel>
-											<h:panelGrid columns="3" cellpadding="5">
+											<h:panelGrid columns="5" cellpadding="5">
 											<h:outputText for="FEPGPR" value="Fecha de Pago: " />
 											<p:inputMask id="FEPGPR" value="#{GestorPagosComunidad.sFEPGPR}" mask="99/99/9999" size="10" maxlength="10"/>
 
 											<p:commandButton icon="ui-icon-clock" update="FEPGPR" actionListener="#{GestorPagosComunidad.hoyFEPGPR}"/>
+
+											<h:outputText for="FechaUltimoDevengo" value="Fecha del último devengo: " />
+											<p:inputText id="FechaUltimoDevengo" value="#{GestorPagosComunidad.sFechaUltimoDevengo}" size="9" disabled="true"/>
+
 											</h:panelGrid>
 									  </p:panel>
 
