--- a/WebContent/envios.xhtml
+++ b/WebContent/envios.xhtml
@@ -72,7 +72,7 @@
 													<p:commandButton value="Revisar Movimientos" update="msgs, popup, NumTransferenciasN34, botTransferenciasN34" actionListener="#{GestorEnvios.cargarMovimientosPagosPendientes}"/>
 												</h:panelGrid>
 											</p:panel>
-										<p:commandButton value="Buscar Provisión" update="NUPROF, form:provisiones, msgs, popup" oncomplete="dlgBuscarProvision.show()"/>		
+										<p:commandButton value="Buscar Provisión Pagada" update="NUPROF, form:provisiones, msgs, popup" oncomplete="dlgBuscarProvision.show()"/>		
 										</h:panelGrid>
 
 									<p:panel >
