--- a/WebContent/detallesprovision.xhtml
+++ b/WebContent/detallesprovision.xhtml
@@ -204,10 +204,28 @@
 															<h:outputText value="#{gasto.FEDEVE}" />
 														</p:column>
 
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Límite de Pago" />
+															</f:facet>
+															<h:outputText value="#{gasto.FELIPG}" />
+														</p:column>
+
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Fecha de Pago" />
+															</f:facet>
+															<h:outputText value="#{gasto.FEEPAI}" />
+														</p:column>
+
+							<f:facet name="footer">
+								<h:commandLink>
+									<p:graphicImage value="recursos/excel.png" />  
+									<p:dataExporter type="xls" target="gastos" fileName="listagastos" encoding="ISO-8859-15"/>  
+								</h:commandLink>
+							</f:facet> 
+
 									</p:dataTable>
-
-
-
 								</h:panelGrid>
 							</p:fieldset>
 						</h:panelGrid>
