--- a/WebContent/pagoprovision.xhtml
+++ b/WebContent/pagoprovision.xhtml
@@ -42,6 +42,7 @@
 						<p:fieldset legend="Info">
 							<h:panelGrid columns="3" cellpadding="5">
 								<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
+								<p:commandButton value="Notas" onclick="dlgNotas.show()" type="button"/>
 
 								<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top" style="height: auto">
 									<h:panelGrid columns="2" cellpadding="5">
@@ -249,10 +250,27 @@
 										</h:panelGrid>
 									</p:fieldset>
 
-
-
 					</h:panelGrid>
 				</p:panel>
+
+					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
+					<h:panelGrid columns="1" cellpadding="1">
+						<p:panel>
+							<h:panelGrid columns="2" cellpadding="5">
+
+								<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorPagosProvision.limpiarNota}"/>
+
+							</h:panelGrid>
+						</p:panel>
+
+						<h:panelGrid columns="1" cellpadding="5">
+							<h:outputText id="counternota"/>
+							<p:inputTextarea id="NOTA" value="#{GestorPagosProvision.sNota}" cols="40" rows="10" counter="counternota" maxlength="500"
+								counterTemplate="{0} carácteres restantes." autoResize="false"/>
+						</h:panelGrid>
+					</h:panelGrid>
+					</p:dialog>
+
 					<p:dialog header="Buscar Provisiones: " widgetVar="dlgBuscarProvision" resizable="false">  
 									<p:fieldset legend="Criterios de Busqueda">
 										<h:panelGrid columns="1" cellpadding="5">
